<resources>
    <string name="app_name">Chef Shift</string>
    <!-- TODO: Remove or change this placeholder text -->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="chef_shift">Chef Shift</string>
    <string name="skip">Skip</string>
    <string name="slogan">Is The best ,Forget the Rest</string>
    <string name="google">Google</string>
    <string name="facebook">FaceBook</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="login">Login</string>
    <string name="arwa">Arwa Ashraf</string>
    <string name="logout">Logout</string>
    <string name="favourite">Favourite List</string>
    <string name="change_username">Change UserName</string>
    <string name="enter_meal_name">Enter Meal Name</string>
    <string name="instructions">Instructions :</string>
    <string name="scrolltext"> "Bring a large pot of water to a boil. Add kosher salt to the boiling water,
        then add the pasta. Cook according to the package instructions, about 9 minutes.
        In a large skillet over medium-high heat, add the olive oil and heat until the oil
        starts to shimmer. Add the garlic and cook, stirring, until fragrant,
        1 to 2 minutes. Add the chopped tomatoes, red chile flakes, Italian seasoning
        and salt and pepper to taste. Bring to a boil and cook for 5 minutes. Remove
        from the heat and add the chopped basil.\r\nDrain the pasta and add it to the sauce.
        Garnish with Parmigiano-Reggiano flakes and more basil and serve warm."
                 </string>
    <string name="ingredients">Main Ingredients :</string>
    <string name="video">Video :</string>
    <string name="garlic">garlic</string>
    <string name="favourite_list">Favourite List</string>
    <string name="chicken">Chicken</string>
    <string name="settings">Settings</string>
    <string name="inspiration_for_you">Inspiration For You :</string>
    <string name="search_by_ingredient">Search by ingredient :</string>
    <string name="signIn">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome To</string>
    <string name="loginText">Enter your Phone number or Email \naddress for Sign In.Enjoy your food.</string>
    <string name="rememberMe">Remember Me</string>
    <string name="noAccount">Don\'t have an account? </string>
    <string name="or">OR</string>
    <string name="connectFace">Connect with facebook</string>
    <string name="connectGoogle">Connect with Google</string>
    <string name="createAccount">Create Account</string>
    <string name="haveAccount">Already have account?</string>
    <string name="signUpText">Enter your Name,Email and password \nfor Sign Up</string>
    <string name="search_by_category">Search by Category :</string>
    <string name="search_by_area">Search By Area :</string>
    <string name="fish_stew">Fish Stew with Rouille</string>
    <string name="fettuccine_alfredo">Fettuccine Alfredo</string>
    <string name="paste">Paste</string>
    <string name="italian">Italian</string>
    <string name="sake_soy_sauce_sesame_seed_oil">Sake,Soy Sauce,Sesame Seed Oil</string>
    <string name="seafood_recipes">Seafood Recipes</string>
    <string name="plan">Plan</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="weekPlan">Week Plan</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">TuesDay</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="planned">Planned</string>
    <string name="days_of_week">Days Of Week</string>
    <string name="category">Category :</string>
    <string name="area">Area :</string>
    <string name="favourite2">Favourite</string>
    <string name="ingredients2">Ingredients :</string>
    <string name="all_category">Category Meals</string>
    <string name="lime">Lime</string>
    <string name="play">Play</string>
    <string name="week_days">Week Days</string>
    <string name="inserted_toweek">Inserted to Week Table</string>
    <string name="planner_meals">Planner Meals</string>
    <string name="login_successfully_please_wait">Login successfully, Please wait...</string>
    <string name="loginFirst">You Have To Login First</string>
    <string name="enterYourMeal">Enter Your Meal</string>
    <string name="error_pass_msg">Password must have at least one numeric character ,one uppercase character,one lowercase character,one special symbol among @#$% and Password length should be between 8 and 20.</string>
    <string name="add_to_calender">Add this meal to calender</string>
</resources>