<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.signUp.view.SignUpFragment"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/img_backSignUp"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_gravity="top"
        android:src="@drawable/arrow_back"
        app:tint="@color/blue" />

    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:src="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputUserName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/teal_700"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_700"
        app:startIconDrawable="@drawable/person"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/teal_700"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_700"
        app:startIconDrawable="@drawable/email"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/teal_700"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_700"
        app:startIconDrawable="@drawable/lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton

        android:id="@+id/btnSignUp"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/createAccount"
        app:cornerRadius="10dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/or"

        android:textSize="18dp"></TextView>

    <TextView
        android:id="@+id/text_view_haveAcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/haveAccount"
        android:textColor="@color/teal_700"
        android:textSize="18sp" />

</LinearLayout>