<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    tools:context=".ui.home.view.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/inspiration_for_you"
            android:textColor="#1C1C1C"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewMealHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="30dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="24dp">

            <ProgressBar
                android:id="@+id/progressMealOfTheDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="@dimen/_5sdp"
                android:indeterminateTint="@color/teal_700"
                android:visibility="gone"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/rootMealOfTheDay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_8sdp">


                <ImageView
                    android:id="@+id/image_meal"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    tools:layout_editor_absoluteX="82dp"
                    tools:layout_editor_absoluteY="113dp"
                    tools:src="@drawable/random_meal" />


                <TextView
                    android:id="@+id/text_view_mealName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/fettuccine_alfredo" />

                <TextView
                    android:id="@+id/text_viewcategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/paste" />

                <TextView
                    android:id="@+id/text_view_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/italian" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/search_by_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/search_by_category"
            android:textColor="#1C1C1C"
            android:textSize="24sp"
            android:textStyle="bold" />


        <ProgressBar
            android:id="@+id/progressCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_4sdp"
            android:elevation="@dimen/_5sdp"
            android:indeterminateTint="@color/teal_700"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="48dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/category_row" />


    </LinearLayout>
</ScrollView>