<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8sdp"
    android:backgroundTint="@color/shadowed_yellow"
    android:elevation="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_15sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_5sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_meal_fav"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.28"
            tools:src="@drawable/coco" />

        <TextView
            android:id="@+id/text_view_mealName_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:maxEms="7"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toTopOf="@id/text_view_category_fav"
            app:layout_constraintStart_toEndOf="@id/image_meal_fav"
            app:layout_constraintTop_toTopOf="@id/image_meal_fav"
            tools:text="@string/chicken" />

        <TextView
            android:id="@+id/text_view_category_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColor="@color/blue"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="@id/image_meal_fav"
            app:layout_constraintStart_toStartOf="@id/text_view_mealName_fav"
            app:layout_constraintTop_toBottomOf="@id/text_view_mealName_fav"
            tools:text="@string/garlic" />

        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:contentDescription="@string/image"
            android:src="@drawable/baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/yellow" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>